# JDWM

./: .gitignore  README.md
jdwm_flutter/: README.md  pubspec.yaml
jdwm_flutter/lib/: jdwm_flutter.dart
jdwm_flutter/lib/base/: window.dart  window_stack_controller.dart
jdwm_flutter/lib/widgets/: window_content.dart  window_header.dart  window_stack.dart  window_ui.dart  window_widget.dart
jdwm_server/: .gitignore  README.md  meson.build
jdwm_server/scripts/: run.sh
